fix: Country select text was cut off. I adapted the padding for the country select field so the text is not cut off at the bottom

--- a/checkout/static/checkout/css/checkout.css
+++ b/checkout/static/checkout/css/checkout.css
@@ -47,6 +47,10 @@ select:invalid {
     transition: box-shadow 150ms ease;
 }
 
+select#id_country.stripe-style-input {
+    padding: 1px 12px;
+}
+
 .StripeElement--webkit-autofill {
     background-color: #fefde5 !important;
 }
